# m6_project

./: .dockerignore  .gitignore  Dockerfile  config.yaml  pyproject.toml  pyproject.toml.bak  requirements.txt
api/: main.py
docs/business_understanding/: project_charter.md
docs/data/: data_definition.md  data_dictionary.md  data_summary.md
docs/deployment/: deploymentdoc.md
docs/modeling/: baseline_models.md  model_report.md
models/: metrics_20250717_214053.json  metrics_20250717_214252.json  model_20250717_214053.pkl  model_20250717_214252.pkl  model_tracking.csv  params_20250717_214252.json  preprocessor_20250717_214053.pkl
scripts/data_acquisition/: acquisition.py
scripts/eda/: eda.ipynb  modeling.ipynb
scripts/training/: train_model.py
src/models/: base_model.py  optimization.py
src/preprocessing/: preprocessors.py
src/tdsp_analysis.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
