[tool.poetry]
name = "tdsp_analysis"
version = "0.1.0"
description = "Análisis de datos con Python para el proyecto M6"
authors = ["Tu Nombre <tu@email.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.3.0"
numpy = "^1.21.0"
matplotlib = "^3.5.0"
seaborn = "^0.12.2"
scipy = "^1.7.0"
plotly = "^5.3.0"
jupyter = "^1.0.0"
lightgbm = "^3.3.0"
joblib = "^1.1.0"
optuna = "^3.0.0"
scikit-learn = "1.1.3"
imbalanced-learn = "^0.10.0"

[tool.poetry.group.dev.dependencies]
pytest = "^6.0.0"
black = "^21.0"
isort = "^5.0.0"
flake8 = "^3.9.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
